<resources>
    <string name="app_name">GasGame</string>
    <string name="Enter_your_name">enter your name</string>
    <string name="Enter_your_email">enter your email</string>
    <string name="Enter_your_password">enter your password</string>
    <string name="Gender">Gender</string>
    <string name="Mail">Mail</string>
    <string name="Femail">Femail</string>
    <string name="Notification">Notification</string>
    <string name="Sound">sound</string>
    <string name="Start_play">Start play</string>
    <string name="Start_over">Start over</string>
    <string name="Profile">profile</string>
    <string name="Sign_in">Sign in</string>
    <string name="The_first_stage">The first stage</string>
    <string name="The_second_stage">The second stage</string>
    <string name="Num_of_poin_trequird">Num Of Point Requird</string>
    <string name="Creat_acount">Creat Acount</string>
    <string name="do_you_want_to_create_a_new_account">Do you want to create a new account?</string>
    <string-array name="Countery">
        <item>Palestine</item>
        <item>Egypt</item>
        <item>Jordan</item>
        <item>Lebanon</item>
        <item>Qatar</item>
        <item>Syria</item>
        <item>Yemen</item>
    </string-array>
</resources>