<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_usersignin"
        android:layout_width="127dp"
        android:layout_height="120dp"
android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/ed_email_signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:hint="@string/Enter_your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_usersignin" />

    <EditText
        android:id="@+id/ed_pass_signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:hint="@string/Enter_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email_signin" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        android:layout_width="190dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:background="@drawable/shape_in_rectangle"
        android:backgroundTint="#D1AB3B"
        android:text="@string/Sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_pass_signin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin">

        <TextView
            android:id="@+id/btn_qustioncreatacount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/do_you_want_to_create_a_new_account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/tv_creatacount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/Creat_acount"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>