<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_userprofile"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Enter_your_name"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_userprofile" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:hint="@string/Enter_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:hint="@string/Enter_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />



    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="left"
            android:text="@string/Gender"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/frmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/Mail"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/mail"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/Femail"
            android:textAllCaps="false" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:entries="@array/Countery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/tv_datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_in_rectangle"
        android:ems="10"
        android:hint="Birthdate"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="#2A75EA"
        android:textColorHint="#2A75EA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="171dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:background="@drawable/shape_in_rectangle"
        android:backgroundTint="#9F921E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_datepicker" />


</androidx.constraintlayout.widget.ConstraintLayout>